--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-		<input class="input" type="search" placeholder="Search..." formaction="http://google.com/search?q">
+		<input class="input" type="search" placeholder="Search...">
 		<button class="input" type="submit">
 			<img src="img/magnifier.svg" alt="">
 		</button>
